Successfully calling the remove function with additional form. Checking out the conf file seems to work need to check after IT will fix the CC error